--- a/Energy.html
+++ b/Energy.html
@@ -19,7 +19,7 @@
      </ul>
      <div>
      <h1>Блок Питания</h1>
-     <img src="Energy.jpg">
+     <img src="energy.jpg">
      <p>Компьютерный блок питания  — вторичный источник электропитания, предназначенный для снабжения узлов компьютера электроэнергией постоянного тока путём преобразования сетевого напряжения до требуемых значений.
 
 Также в состав компьютера могут входить блоки преобразования уровня напряжения следующей ступени — третичные блоки питания и т. д. Примером таких преобразователей могут служить модуль питания центральных процессоров (в том числе модернизируемых), графических процессоров, а также устройства, требующие повышения напряжения или изменения характеристик тока — переменного, с изменением фазы.
